--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
             </div>
         </div>
     </div>
-
+    <div style="position: relative; top: 25px; margin: auto; width: 1000px; height: 10px; font-size: 12px; text-align: center; color: rgb(184, 184, 184);">본 사이트는 개인 포트폴리오 사이트로 제작되어 상업적 목적이 아닙니다. 사용된 일부 이미지 및 폰트 등은 별도의 출처가 있음을 밝혀드립니다.</div>
+    <br><br><br>
     <script src="./main.js"></script>
     <script src="./header.js"></script>
     <script data-cfasync="false" type="text/javascript"
